Fixed #28 -- Restored visibility of Wiki history button.

--- a/trac-env/htdocs/css/trachacks.scss
+++ b/trac-env/htdocs/css/trachacks.scss
@@ -314,6 +314,6 @@ div[role="main"]{
   }
 
   #ctxtnav {
-    display: none;
+    float: right;
   }
 }
